filtro select js-jquery

--- a/versione-js-jquery/index.html
+++ b/versione-js-jquery/index.html
@@ -30,6 +30,11 @@
             </div>
         </header>
         <div class="container-cards">
+
+            <select id="select" class="" name="">
+                <option value="">All Genre</option>
+            </select>
+
             <div class="cards">
 
             </div>
@@ -43,8 +48,9 @@
                         <p>{{author}}</p>
                         <p>{{year}}</p>
                     </div>
-            
+
         </script>
-        <script src="main.js" charset="utf-8"></script>
+        <script src="../dist/app.js" charset="utf-8"></script>
+        <!-- <script src="../dist/app.css" charset="utf-8"></script> impostare questo script e controllare se run dev compila -->
     </body>
 </html>
